edit about page

--- a/about.html
+++ b/about.html
@@ -7,11 +7,14 @@
   <title>4Kreative</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134678695-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
 
     gtag('config', 'UA-134678695-1');
@@ -63,31 +66,16 @@
         <div class="bg-layer"></div>
       </div><!-- Ink Transition -->
       <section class="packages">
-        <h3 class="title">Services</h3>
-        <p>We offer a variety of services. Whether you're looking for a custom logo to an eccomerce solution.</p>
-        <hr>
-
+        <h2 class="title_about">About Us</h2>
         <ul class="grid">
-          <li>
-            <i class="fa fa-pencil-square-o fa-4x"></i>
+          <li class="who_we_are">
             <h4>Web Design</h4>
             <p>Create the perfect design to fit you and your business. Custom Logo's, Animations, Layout, you name it I
               create it.</p>
           </li>
-          <li>
-            <i class="fa fa-bicycle fa-4x"></i>
+          <li class="our_process">
             <h4>SEO</h4>
             <p>Optimize your website with latest SEO hacks for max traffic.</p>
-          </li>
-          <li>
-            <i class="fa fa-bicycle fa-4x"></i>
-            <h4>Custom Websites</h4>
-            <p>We use variety of different technologies to build the site of your dreams.</p>
-          </li>
-          <li>
-            <i class="fa fa-flag-checkered fa-4x"></i>
-            <h4>Marketing</h4>
-            <p>Market your site on every social media platform.</p>
           </li>
         </ul>
       </section>
