updated services page

--- a/services.html
+++ b/services.html
@@ -68,24 +68,34 @@
         <ul class="grid">
           <li>
             <i class="fa fa-pencil-square-o fa-4x"></i>
-            <h4>Web Design</h4>
-            <p>Create the perfect design to fit you and your business. Custom Logo's, Animations, Layout, you name it I
-              create it.</p>
+            <h4>Custom Website Design</h4>
+            <p>WordPress Web Development</p>
+            <p>E-commerce Websites</p>
+            <p>Content Management Installation</p>
+            <p>Hosting & Maintenance</p>
+            <p>Mobile & Responsive Designs</p>
+            <p>Website Speed Optimization</p>
           </li>
           <li>
-            <i class="fa fa-bicycle fa-4x"></i>
-            <h4>SEO</h4>
-            <p>Optimize your website with latest SEO hacks for max traffic.</p>
+            <i class="fa fa-search fa-4x"></i>
+            <h4>Search Engine Optimization</h4>
+            <p>Link Building</p>
+            <P>Local Search Optimization</P>
           </li>
           <li>
-            <i class="fa fa-bicycle fa-4x"></i>
-            <h4>Custom Websites</h4>
-            <p>We use variety of different technologies to build the site of your dreams.</p>
+            <i class="fa fa-picture-o fa-4x"></i>
+            <h4>Graphic Design</h4>
+            <p>Logos</p>
+            <p>Infographics</p>
+            <p>Branding</p>
           </li>
           <li>
             <i class="fa fa-flag-checkered fa-4x"></i>
             <h4>Marketing</h4>
-            <p>Market your site on every social media platform.</p>
+            <p>Email Marketing</p>
+            <p>Content Marketing</p>
+            <P>Social Media Marketing</P>
+            <P>Paid Search Placement – PPC</P>
           </li>
         </ul>
       </section>
