updated services page

--- a/services.html
+++ b/services.html
@@ -60,7 +60,7 @@
         <div class="bg-layer"></div>
       </div><!-- Ink Transition -->
 
-      <section class="packages">
+      <section class="services">
         <h3 class="title">Services</h3>
         <p>We offer a variety of services. Whether you're looking for a custom logo to an eccomerce solution.</p>
         <hr>
