made few cahnges to contact form

--- a/contact.html
+++ b/contact.html
@@ -70,10 +70,10 @@
               <input name="email" name="_replyto" placeholder="Email" required="required" size="8" type="email">
             </li>
             <li class="contact-input">
-              <input name="phone" placeholder="Phonenumber" required="required" size="8" type="text">
+              <input name="phone" placeholder="Phone Number" required="required" size="8" type="text">
               <input name="company" placeholder="Company/Agency" required="required" size="8" type="text">
             </li>
-            <li class="contact-details">
+            <li class="contact-budget">
               <label>Budget Estimate </label>
               <div id="slider-range-min"></div>
               <input name="amount" type="text" id="amount" readonly>
@@ -82,7 +82,7 @@
               <textarea class="span12" name="message" placeholder="Project Details" required="required"></textarea>
             </li>
 
-            <li>
+            <li class="contact-details">
               <button type="submit">Submit <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></button>
             </li>
           </ul>
