updated base font size and contact form

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
             </li>
           </ul>
         </div>
-        <a href="#0" class="modal-close">Close</a>
+        <a href="#0" class="modal-close"></a>
       </div>
 
     <div class="cd-transition-layer">
@@ -66,28 +66,27 @@
       <form action = "https://formspree.io/mail.4kreative@gmail.com" method="POST">
         <ul class="contact-form">
           <li class= "contact-input">
-              <input name="name" placeholder="Your Name" required="required" size="8" type="text">
-              <input name="email" name="_replyto" placeholder="Email" required="required" size="8" type="email">
-            </li>
-            <li class="contact-input">
-              <input name="phone" placeholder="Phone Number" required="required" size="8" type="text">
-              <input name="company" placeholder="Company/Agency" required="required" size="8" type="text">
-            </li>
-            <li class="contact-budget">
-              <label>Budget Estimate </label>
-              <div id="slider-range-min"></div>
-              <input name="amount" type="text" id="amount" readonly>
-            </li>
-            <li class="contact-details">
-              <textarea class="span12" name="message" placeholder="Project Details" required="required"></textarea>
-            </li>
-
-            <li class="contact-details">
-              <button type="submit">Submit <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></button>
-            </li>
-          </ul>
-        </form>
-      </section>
+            <input name="name" placeholder="Your Name" required="required" size="8" type="text">
+            <input name="email" name="_replyto" placeholder="Email" required="required" size="8" type="email">
+          </li>
+          <li class="contact-input">
+            <input name="phone" placeholder="Phone Number" required="required" size="8" type="text">
+            <input name="company" placeholder="Company/Agency" required="required" size="8" type="text">
+          </li>
+          <li class="contact-budget">
+            <label>Budget Estimate </label>
+            <div id="slider-range-min"></div>
+            <input name="amount" type="text" id="amount" readonly>
+          </li>
+          <li class="contact-details">
+            <textarea class="span12" name="message" placeholder="Project Details" required="required"></textarea>
+          </li>
+          <li>
+            <button type="submit">Submit <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></button>
+          </li>
+        </ul>
+      </form>
+    </section>
     </div>
   </div>
 
