--- a/work.html
+++ b/work.html
@@ -151,7 +151,7 @@
             </li>
           </ul>
         </div>
-        <a href="#0" class="modal-close">Close</a>
+        <a href="#0" class="modal-close"></a>
       </div>
       <div class="cd-transition-layer">
         <div class="bg-layer"></div>
