about us update

--- a/about.html
+++ b/about.html
@@ -69,13 +69,15 @@
         <h2 class="title_about">About Us</h2>
         <ul class="grid">
           <li class="who_we_are">
-            <h4>Web Design</h4>
-            <p>Create the perfect design to fit you and your business. Custom Logo's, Animations, Layout, you name it I
-              create it.</p>
+            <h3>The Team</h3>
+            <img src="assets\img\team.png" alt="team">
+            <p>We are a team of creative and technical proffesionals.</p>
           </li>
           <li class="our_process">
-            <h4>SEO</h4>
-            <p>Optimize your website with latest SEO hacks for max traffic.</p>
+            <h3>The Process</h3>
+            <p>1. Get In Touch<br>
+              Based on conversations with you, the client, we learn about your website goals and create a proposal to
+              align expectations, <br>educate each other, define features and scope, and outline cost and duration.</p>
           </li>
         </ul>
       </section>
