about us update

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
             <h3>The Process</h3>
             <p>1. Get In Touch<br>
               Based on conversations with you, the client, we learn about your website goals and create a proposal to
-              align expectations, <br>educate each other, define features and scope, and outline cost and duration.</p>
+              align expectations, educate each other, define features and scope, and outline cost and duration.</p>
           </li>
         </ul>
       </section>
