--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <li class="social__main">
           <li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
           <li><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
-          <li><a href="#"><i class="fa fa-snapchat fa-2x"></i></a></li>
+          <li><a href="#"><i class="fa fa-envelope fa-2x"></i></a></li>
           </li>
         </ul>
         <div class="background-image"></div>
