--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="work.html">Work</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <div class="social_menu">
-            <li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
-            <li><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
-            <li><a href="#"><i class="fa fa-envelope fa-2x"></i></a></li>
+            <div class="social">
+            <li><a href="#1"><i class="fa_menu fa fa-twitter fa-2x"></i></a></li>
+            <li><a href="#2"><i class="fa_menu fa fa-facebook fa-2x"></i></a></li>
+            <li><a href="#3"><i class="fa_menu fa fa-envelope fa-2x"></i></a></li>
             </div>
           </ul>
         </div>
