html file updates

--- a/services.html
+++ b/services.html
@@ -46,14 +46,13 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="work.html">Work</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li class="social">
-              <a href="#"><img src="icons/social/twitter.svg" alt=""></a>
-              <a href="#"><img src="icons/social/dribbble.svg" alt=""></a>
-              <a href="#"><img src="icons/social/instagram.svg" alt=""></a>
-              <a href="#"><img src="icons/social/send.svg" alt=""></a>
-            </li>
-          </ul>
-        </div>
+            <div class="social">
+              <li><a href="#1"><i class="fa_menu fa fa-twitter fa-2x"></i></a></li>
+              <li><a href="#2"><i class="fa_menu fa fa-facebook fa-2x"></i></a></li>
+              <li><a href="#3"><i class="fa_menu fa fa-envelope fa-2x"></i></a></li>
+              </div>
+            </ul>
+          </div>
         <a href="#0" class="modal-close"></a>
       </div>
       <div class="cd-transition-layer">
