--- a/work.html
+++ b/work.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>4Kreative</title>
-  <meta name="description" content="At 4Kreative we build bespoke websites to help our clients push their businesses further online. Whether it's simple Blog or an Eccomerce Site. I preach Secure, DRY & Structured development!">
-  <meta name="keywords" content="4Kreative, web development, design, fullstack, ecommerce, seo, Boston, MA, Clearwater, FL USA">
+  <meta name="description"
+    content="At 4Kreative we build bespoke websites to help our clients push their businesses further online. Whether it's simple Blog or an Eccomerce Site. I preach Secure, DRY & Structured development!">
+  <meta name="keywords"
+    content="4Kreative, web development, design, fullstack, ecommerce, seo, Boston, MA, Clearwater, FL USA">
   <meta name="author" content="Taras Kurilo, Ivan Perun">
-  <meta name= "robots" content="index, follow">
+  <meta name="robots" content="index, follow">
   <meta name="DC.title" content="4Kreative" />
   <meta name="geo.region" content="US-MA" />
   <meta name="geo.placename" content="Stoughton" />
@@ -20,9 +22,11 @@
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property="og:title" content="4Kreative Digital Media Marketing Agency">
-  <meta property="og:description" content="At 4Kreative we build bespoke websites to help our clients push their businesses further online. Whether it's simple Blog or an Eccomerce Site. I preach Secure, DRY & Structured development!. Contact me now.">
+  <meta property="og:description"
+    content="At 4Kreative we build bespoke websites to help our clients push their businesses further online. Whether it's simple Blog or an Eccomerce Site. I preach Secure, DRY & Structured development!. Contact me now.">
   <meta property="og:url" content="https://www.4kreative.co/">
-  <meta property="og:site_name" content="4Kreative | Digital Media Marketing Agency, Web Developent, Design, Ecommerce in Boston &amp; MA &amp; & Clearwater &amp; FL &amp; USA">
+  <meta property="og:site_name"
+    content="4Kreative | Digital Media Marketing Agency, Web Developent, Design, Ecommerce in Boston &amp; MA &amp; & Clearwater &amp; FL &amp; USA">
   <meta property="og:image" content="https://4kreative.co/img/logo.png">
   <meta property="og:image:secure_url" content="https://4kreative.co/img/logo.png">
   <meta property="og:image:width" content="960">
@@ -32,86 +36,89 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   <!-- Google Structured Data Rich Snippet Review Schema -->
   <script type="application/ld+json">
-      {
-          "@context": "http://schema.org/",
-          "@type": "Review",
-          "itemReviewed": {
-              "@type": "Service",
-              "name": "4kreative.co"
-          },
-          "author": {
-              "@type": "Person",
-              "name": "Joe Smith"
-          },
-          "reviewRating": {
-              "@type": "Rating",
-              "ratingValue": "5",
-              "bestRating": "5"
-          }
+    {
+      "@context": "http://schema.org/",
+      "@type": "Review",
+      "itemReviewed": {
+        "@type": "Service",
+        "name": "4kreative.co"
+      },
+      "author": {
+        "@type": "Person",
+        "name": "Joe Smith"
+      },
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5",
+        "bestRating": "5"
       }
+    }
   </script>
-   <!-- Google Structured Data Person Schema -->
-   <script type="application/ld+json">
-      {
-          "@context": "http://schema.org",
-          "@type": "Person",
-          "address": {
-          "@type": "PostalAddress",
-          "addressLocality": "Stoughton",
-          "addressRegion": "MA",
-          "postalCode": "02072"
-          },
-          "email": "mail.4kreative@gmail.com",
-          "image": "https://4kreative.co/img/logo.png",
-          "jobTitle": "Web Developer",
-          "name": "Taras Kurilo",
-          "alumniOf": "Umass Boston",
-          "url": "https://www.taraskurilo.com",
-          "sameAs": [
-              "https://www.linkedin.com/in/taras-kurilo-4a922613a/",
-              "https://plus.google.com/106437617603533510597"
-          ],
-          "colleague": [
-              "http://perundesign.com/",
-              "https://iperun23.github.io/"
-          ]
-      }
+  <!-- Google Structured Data Person Schema -->
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Person",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Stoughton",
+        "addressRegion": "MA",
+        "postalCode": "02072"
+      },
+      "email": "mail.4kreative@gmail.com",
+      "image": "https://4kreative.co/img/logo.png",
+      "jobTitle": "Web Developer",
+      "name": "Taras Kurilo",
+      "alumniOf": "Umass Boston",
+      "url": "https://www.taraskurilo.com",
+      "sameAs": [
+        "https://www.linkedin.com/in/taras-kurilo-4a922613a/",
+        "https://plus.google.com/106437617603533510597"
+      ],
+      "colleague": [
+        "http://perundesign.com/",
+        "https://iperun23.github.io/"
+      ]
+    }
   </script>
   <!-- Google Structured Data Website Schema -->
   <script type="application/ld+json">
-      {
-          "@context": "http://schema.org",
-          "@type": "WebSite",
-          "@id":"#website",
-          "url": "https://4kreative.co/",
-          "name":"4Kreative | Digital Media Marketing Agency ,Web Developement, Design, SEO & Eccomerce in USA &amp; Stoughton &amp; Clearwater",
-          "description": "I build bespoke websites to help my clients push their businesses further online.",
-          "publisher": "Taras Kurilo, Ivan Perun",
-          "potentialAction": {
-              "@type": "SearchAction",
-              "target": "http://4kreative.co/search?&q={query}",
-              "query-input": "required name=query"
-          }
+    {
+      "@context": "http://schema.org",
+      "@type": "WebSite",
+      "@id": "#website",
+      "url": "https://4kreative.co/",
+      "name": "4Kreative | Digital Media Marketing Agency ,Web Developement, Design, SEO & Eccomerce in USA &amp; Stoughton &amp; Clearwater",
+      "description": "I build bespoke websites to help my clients push their businesses further online.",
+      "publisher": "Taras Kurilo, Ivan Perun",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "http://4kreative.co/search?&q={query}",
+        "query-input": "required name=query"
       }
+    }
   </script>
   <!-- Google Structured Data Logo Schema -->
   <script type="application/ld+json">
-      {
-          "@context": "http://schema.org",
-          "@type": "Organization",
-          "url": "https://www.4kreative.co",
-          "logo": "https://4kreative.co/img/logo.png"
-      }
+    {
+      "@context": "http://schema.org",
+      "@type": "Organization",
+      "url": "https://www.4kreative.co",
+      "logo": "https://4kreative.co/img/logo.png"
+    }
   </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134678695-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134678695-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-134678695-1');
-</script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-134678695-1');
+  </script>
 
 </head>
 
@@ -143,12 +150,11 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="work.html">Work</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li class="social">
-              <a href="#"><img src="icons/social/twitter.svg" alt=""></a>
-              <a href="#"><img src="icons/social/dribbble.svg" alt=""></a>
-              <a href="#"><img src="icons/social/instagram.svg" alt=""></a>
-              <a href="#"><img src="icons/social/send.svg" alt=""></a>
-            </li>
+            <div class="social">
+              <li><a href="#1"><i class="fa_menu fa fa-twitter fa-2x"></i></a></li>
+              <li><a href="#2"><i class="fa_menu fa fa-facebook fa-2x"></i></a></li>
+              <li><a href="#3"><i class="fa_menu fa fa-envelope fa-2x"></i></a></li>
+            </div>
           </ul>
         </div>
         <a href="#0" class="modal-close"></a>
