--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
       <div class="bg-layer"></div>
     </div><!-- Ink Transition -->
     <section id="contact">
-      <h1>Contact</h1>
+      <h2>Contact Us</h2>
       <form action = "https://formspree.io/mail.4kreative@gmail.com" method="POST">
         <ul class="contact-form">
           <li class= "contact-input">
