--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
             <li><a href="work.html">Work</a></li>
             <li><a href="contact.html">Contact</a></li>
             <div class="social">
-            <li><a href="#1"><i class="fa_menu fa fa-twitter fa-2x"></i></a></li>
-            <li><a href="#2"><i class="fa_menu fa fa-facebook fa-2x"></i></a></li>
-            <li><a href="#3"><i class="fa_menu fa fa-envelope fa-2x"></i></a></li>
+              <li><a href="#1"><i class="fa_menu fa fa-twitter fa-2x"></i></a></li>
+              <li><a href="#2"><i class="fa_menu fa fa-facebook fa-2x"></i></a></li>
+              <li><a href="#3"><i class="fa_menu fa fa-envelope fa-2x"></i></a></li>
             </div>
           </ul>
         </div>
@@ -188,15 +188,15 @@
             <span class="cursor" data-owner="main"></span>
           </div>
         </div>
-        <div class="main_button">
-          <div class="button" id="services_btn">
+        <div class="buttons">
+          <div class="button_main" id="services_btn">
             <a href="#">
-              <span id="button_span">&rsaquo;</span> <span id="srv">Services</span>
+              Services
             </a>
           </div>
-          <div class="button" id="contact_btn">
+          <div class="button_main" id="contact_btn">
             <a href="#">
-              <span id="button_span">&rsaquo;</span> <span id="cnt">Contact Us</span>
+              Contact Us
             </a>
           </div>
         </div>
