index page finish

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <span class="cursor" data-owner="main"></span>
           </div>
         </div>
-        <div class="buttons">
+        <div class="buttons main_page_buttons">
           <div class="button_main" id="services_btn">
             <a href="#">
               Services
