setup grid  for all sections

--- a/indexNew.html
+++ b/indexNew.html
@@ -10,10 +10,16 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="" />
     <title>4 Kreative</title>
   </head>
-  <body>
-    Test Text
+  <body class="container">
+    <header class="header">Header</header>
+    <section class="work">Featured Work</section>
+    <div class="about__work">What we do</div>
+    <div class="about__team">About team</div>
+    <section class="services">Services</section>
+    <section class="contact">Contact</section>
+    <footer class="footer">Footer</footer>
   </body>
 </html>
