added services section

--- a/indexNew.html
+++ b/indexNew.html
@@ -15,10 +15,59 @@
   </head>
   <body class="container">
     <header class="header">Header</header>
-    <section class="work">Featured Work</section>
+    <section class="work">serviced Work</section>
     <div class="about__work">What we do</div>
     <div class="about__team">About team</div>
-    <section class="services">Services</section>
+    <section class="services">
+      <div class="service">
+        <svg class="service__icon">
+          <use xlink:href="img/sprite.svg#icon-global"></use>
+        </svg>
+        <h4 class="heading-4 heading-4--dark">Custom Web Design</h4>
+        <p class="service__text">
+          If you want want your website to work in all situations, then you need
+          something that's fast to load, looks professional and most of all,
+          just works. That's exactly what I offer whether it's a simple HTML and
+          CSS site to an Eccomerce Site.
+        </p>
+      </div>
+      <div class="service">
+        <svg class="service__icon">
+          <use xlink:href="img/sprite.svg#icon-presentation"></use>
+        </svg>
+        <h4 class="heading-4 heading-4--dark">Search Engine Optimization</h4>
+        <p class="service__text">
+          Link Building
+        </p>
+      </div>
+      <div class="service">
+        <svg class="service__icon">
+          <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+        </svg>
+        <h4 class="heading-4 heading-4--dark">Graphic Design</h4>
+        <p class="service__text">
+          Logos
+        </p>
+      </div>
+      <div class="service">
+        <svg class="service__icon">
+          <use xlink:href="img/sprite.svg#icon-key"></use>
+        </svg>
+        <h4 class="heading-4 heading-4--dark">Marketing</h4>
+        <p class="service__text">
+          Email Marketing
+        </p>
+        <p class="service__text">
+          Social Media Marketing
+        </p>
+        <p class="service__text">
+          Hosting & Maintenance
+        </p>
+        <p class="service__text">
+          Paid Search Placement – PPC
+        </p>
+      </div>
+    </section>
     <section class="contact">Contact</section>
     <footer class="footer">Footer</footer>
   </body>
