added about team section

--- a/indexNew.html
+++ b/indexNew.html
@@ -16,8 +16,31 @@
   <body class="container">
     <header class="header">Header</header>
     <section class="work">serviced Work</section>
-    <div class="about__work">What we do</div>
-    <div class="about__team">About team</div>
+    <div class="about__img">What we do</div>
+    <div class="about__content">
+      <h3 class="heading-3 mb-sm">
+        We are a team of creative and technical proffesionals ready to start
+        your next big idea!
+      </h3>
+      <h2 class="heading-2 heading-2--dark mb-md">
+        What We Do
+      </h2>
+      <p class="about__text">
+        Define: Gather requirments, organize and plan the project.
+      </p>
+      <p class="about__text">
+        Design: Our team collaborates with you to creativly design your brand..
+      </p>
+      <p class="about__text">
+        Develop: Prototypes and alpha version of the project are set for
+        approval
+      </p>
+      <p class="about__text">
+        Deploy: Prototypes and alpha version of the project are set for
+        approval.
+      </p>
+      <button class="btn">Contact Us</button>
+    </div>
     <section class="services">
       <div class="service">
         <svg class="service__icon">
@@ -37,7 +60,10 @@
         </svg>
         <h4 class="heading-4 heading-4--dark">Search Engine Optimization</h4>
         <p class="service__text">
-          Link Building
+          If you want want your website to work in all situations, then you need
+          something that's fast to load, looks professional and most of all,
+          just works. That's exactly what I offer whether it's a simple HTML and
+          CSS site to an Eccomerce Site.
         </p>
       </div>
       <div class="service">
@@ -46,7 +72,10 @@
         </svg>
         <h4 class="heading-4 heading-4--dark">Graphic Design</h4>
         <p class="service__text">
-          Logos
+          If you want want your website to work in all situations, then you need
+          something that's fast to load, looks professional and most of all,
+          just works. That's exactly what I offer whether it's a simple HTML and
+          CSS site to an Eccomerce Site.
         </p>
       </div>
       <div class="service">
@@ -55,16 +84,10 @@
         </svg>
         <h4 class="heading-4 heading-4--dark">Marketing</h4>
         <p class="service__text">
-          Email Marketing
-        </p>
-        <p class="service__text">
-          Social Media Marketing
-        </p>
-        <p class="service__text">
-          Hosting & Maintenance
-        </p>
-        <p class="service__text">
-          Paid Search Placement – PPC
+          If you want want your website to work in all situations, then you need
+          something that's fast to load, looks professional and most of all,
+          just works. That's exactly what I offer whether it's a simple HTML and
+          CSS site to an Eccomerce Site.
         </p>
       </div>
     </section>
