completed about page

--- a/indexNew.html
+++ b/indexNew.html
@@ -16,7 +16,10 @@
   <body class="container">
     <header class="header">Header</header>
     <section class="work">serviced Work</section>
-    <div class="about__img">What we do</div>
+    <div class="about__pictures">
+      <img src="img/img1.jpg" alt="Code" class="about__img--1" />
+      <img src="img/img5.jpg" alt="Design" class="about__img--2" />
+    </div>
     <div class="about__content">
       <h3 class="heading-3 mb-sm">
         We are a team of creative and technical proffesionals ready to start
@@ -26,18 +29,20 @@
         What We Do
       </h2>
       <p class="about__text">
-        Define: Gather requirments, organize and plan the project.
+        <span class="bold">Define:</span> Gather requirments, organize and plan
+        the project.
       </p>
       <p class="about__text">
-        Design: Our team collaborates with you to creativly design your brand..
+        <span class="bold">Design:</span> Our team collaborates with you to
+        creativly design your brand..
       </p>
       <p class="about__text">
-        Develop: Prototypes and alpha version of the project are set for
-        approval
+        <span class="bold">Develop:</span> Prototypes and alpha version of the
+        project are set for approval
       </p>
       <p class="about__text">
-        Deploy: Prototypes and alpha version of the project are set for
-        approval.
+        <span class="bold">Deploy:</span> Prototypes and alpha version of the
+        project are set for approval.
       </p>
       <button class="btn">Contact Us</button>
     </div>
