--- a/indexNew.html
+++ b/indexNew.html
@@ -97,6 +97,21 @@
       </div>
     </section>
     <section class="contact">Contact</section>
-    <footer class="footer">Footer</footer>
+    <footer class="footer">
+      <ul class="nav">
+        <li class="nav__item">
+          <a href="#" class="nav__link">Get In Touch</a>
+        </li>
+
+        <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+
+        <li class="nav__item">
+          <a href="#" class="nav__link">Come work with us!</a>
+        </li>
+      </ul>
+      <p class="copyright">
+        &copy; Copyright 2019 by 4KREATIVE.
+      </p>
+    </footer>
   </body>
 </html>
