added html to header

--- a/indexNew.html
+++ b/indexNew.html
@@ -14,7 +14,33 @@
     <title>4 Kreative</title>
   </head>
   <body class="container">
-    <header class="header">Header</header>
+    <header class="header">
+      <img src="img/logo.png" alt="4KREATIVE logo" class="header__logo" />
+      <div class="sidebar">
+        <svg class="line" height="6" width="40">
+          <line style="stroke:#3ee7d6;;stroke-width:2" x1="0" x2="30" y1="0" y2="0"></line>
+        </svg> Welcome
+      </div>
+      <h3 class="heading-1">4KREATIVE</h3>
+      <h1 class="heading-3">Your Ideas Brought To Life</h1>
+      <div class="typing">
+        <span class="typer" id="main"
+          data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success" data-colors="#333"
+          data-delay="86" data-deleteDelay="3000"></span>
+        <span class="cursor" data-owner="main"></span>
+      </div>
+      <button class="btn header__btn">Contact Us</button>
+      <button class="btn header__btn">Services</button>
+      <ul class="header__social">
+        <li class="header__social__main">
+        <li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa fa-envelope fa-2x"></i></a></li>
+        </li>
+      </ul>
+
+      </div>
+    </header>
     <div class="bg-video">
       <video class="bg-video__content" autoplay muted loop>
         <source src="img/MexicoCity.mp4" type="video/mp4" />
