header section updated

--- a/indexNew.html
+++ b/indexNew.html
@@ -9,33 +9,35 @@
       href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="" />
     <title>4 Kreative</title>
   </head>
   <body class="container">
     <header class="header">
-      <img src="img/logo.png" alt="4KREATIVE logo" class="header__logo" />
-      <div class="sidebar">
+      <img src="img\logo4k.png" alt="4KREATIVE logo" class="header__logo" />
+      <div class="header__sidebar">
         <svg class="line" height="6" width="40">
           <line style="stroke:#3ee7d6;;stroke-width:2" x1="0" x2="30" y1="0" y2="0"></line>
         </svg> Welcome
       </div>
-      <h3 class="heading-1">4KREATIVE</h3>
-      <h1 class="heading-3">Your Ideas Brought To Life</h1>
-      <div class="typing">
+      <h3 class="header__big ">4KREATIVE</h3>
+      <h1 class="header__ideas heading-3">Your Ideas</h1>
+      <h1 class="header__brought heading-3">Brought To Life</h1>
+      <div class="header__typing">
         <span class="typer" id="main"
           data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success" data-colors="#333"
           data-delay="86" data-deleteDelay="3000"></span>
         <span class="cursor" data-owner="main"></span>
       </div>
-      <button class="btn header__btn">Contact Us</button>
-      <button class="btn header__btn">Services</button>
+      <button class="header__btn btn">Contact Us</button>
+      <button class="header__btn2 btn">Services</button>
       <ul class="header__social">
         <li class="header__social__main">
-        <li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-envelope fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa_menu fa fa-twitter fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa_menu fa fa-facebook fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa_menu fa fa-envelope fa-2x"></i></a></li>
         </li>
       </ul>
 
@@ -184,5 +186,6 @@
         &copy; Copyright 2019 by 4KREATIVE.
       </p>
     </footer>
+    <script src="assets/js/typer.js"></script>
   </body>
 </html>
