made few changes to header

--- a/indexNew.html
+++ b/indexNew.html
@@ -23,8 +23,8 @@
         </svg> Welcome
       </div>
       <h3 class="header__big ">4KREATIVE</h3>
-      <h1 class="header__ideas heading-3">Your Ideas</h1>
-      <h1 class="header__brought heading-3">Brought To Life</h1>
+      <h1 class="header__ideas reveal"><span>Your Ideas</span></h1>
+      <h1 class="header__brought reveal" id='revTwo'><span>Brought To Life</span></h1>
       <div class="header__typing">
         <span class="typer" id="main"
           data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success" data-colors="#333"
@@ -34,11 +34,9 @@
       <button class="header__btn btn">Contact Us</button>
       <button class="header__btn2 btn">Services</button>
       <ul class="header__social">
-        <li class="header__social__main">
-        <li><a href="#"><i class="fa_menu fa fa-twitter fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa_menu fa fa-facebook fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa_menu fa fa-envelope fa-2x"></i></a></li>
-        </li>
+        <li><a href="#"><i class="fa_menu fa fa-twitter fa-2x mb-sm"></i></a></li>
+        <li><a href="#"><i class="fa_menu fa fa-facebook fa-2x mb-sm"></i></a></li>
+        <li><a href="#"><i class="fa_menu fa fa-envelope fa-2x "></i></a></li>
       </ul>
 
       </div>
