--- a/indexNew.html
+++ b/indexNew.html
@@ -48,7 +48,31 @@
         Your browser is not supported!
       </video>
     </div>
-    <section class="work">serviced Work</section>
+    <section class="work">
+      <h3 class="heading-3">Recent Projects</h3>
+      <div class="work__list">
+        <img src="img/lightmockup-min.png" alt="Realtor 1" class="work__img">
+        <div class="work__details">
+          <h4 class="heading-4 heading-4--light">The Light Walk</h4>
+          <p class="work__sold">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
+        </div>
+
+        <img src="img/b&lmockup-min.png" alt="Realtor 2" class="work__img">
+        <div class="work__details">
+          <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
+          <p class="work__sold">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
+        </div>
+
+        <img src="img/designmockup-min.png" alt="Realtor 3" class="work__img">
+        <div class="work__details">
+          <h4 class="heading-4 heading-4--light">Designershopp</h4>
+          <p class="work__sold">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
+        </div>
+      </div>
+    </section>
     <div class="about__pictures">
       <img src="img/img1.jpg" alt="Code" class="about__img--1" />
       <img src="img/img5.jpg" alt="Design" class="about__img--2" />
