--- a/indexNew.html
+++ b/indexNew.html
@@ -43,8 +43,7 @@
     </header>
     <div class="bg-video">
       <video class="bg-video__content" autoplay muted loop>
-        <source src="img/MexicoCity.mp4" type="video/mp4" />
-        <source src="img/MexicoCity.webm" type="video/webm" />
+        <source src="img/strings.mp4" type="video/mp4" />
         Your browser is not supported!
       </video>
     </div>
