updated work section

--- a/indexNew.html
+++ b/indexNew.html
@@ -53,21 +53,21 @@
         <img src="img/lightmockup-min.png" alt="Realtor 1" class="work__img">
         <div class="work__details">
           <h4 class="heading-4 heading-4--light">The Light Walk</h4>
-          <p class="work__sold">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
         </div>
 
         <img src="img/b&lmockup-min.png" alt="Realtor 2" class="work__img">
         <div class="work__details">
           <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
-          <p class="work__sold">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
         </div>
 
         <img src="img/designmockup-min.png" alt="Realtor 3" class="work__img">
         <div class="work__details">
           <h4 class="heading-4 heading-4--light">Designershopp</h4>
-          <p class="work__sold">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
         </div>
       </div>
