updated work section

--- a/indexNew.html
+++ b/indexNew.html
@@ -50,21 +50,21 @@
     <section class="work">
       <h3 class="heading-3">Recent Projects</h3>
       <div class="work__list">
-        <img src="img/lightmockup-min.png" alt="Realtor 1" class="work__img">
+        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
         <div class="work__details">
           <h4 class="heading-4 heading-4--light">The Light Walk</h4>
           <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
         </div>
 
-        <img src="img/b&lmockup-min.png" alt="Realtor 2" class="work__img">
+        <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
         <div class="work__details">
           <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
           <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
         </div>
 
-        <img src="img/designmockup-min.png" alt="Realtor 3" class="work__img">
+        <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
         <div class="work__details">
           <h4 class="heading-4 heading-4--light">Designershopp</h4>
           <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
