few changes in header

--- a/indexNew.html
+++ b/indexNew.html
@@ -20,7 +20,7 @@
       <div class="header__sidebar">
         <svg class="line" height="6" width="40">
           <line style="stroke:#3ee7d6;;stroke-width:2" x1="0" x2="30" y1="0" y2="0"></line>
-        </svg> Welcome
+        </svg> Scroll
       </div>
       <h3 class="header__big ">4KREATIVE</h3>
       <h1 class="header__ideas reveal"><span>Your Ideas</span></h1>
