--- a/indexNew.html
+++ b/indexNew.html
@@ -1,212 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" type="image/png" href="" />
-    <title>4 Kreative</title>
-  </head>
-  <body class="container">
-    <header class="header">
-      <img src="img\logo4k.png" alt="4KREATIVE logo" class="header__logo" />
-      <div class="header__sidebar">
-        <svg class="line" height="6" width="40">
-          <line style="stroke:#3ee7d6;;stroke-width:2" x1="0" x2="30" y1="0" y2="0"></line>
-        </svg> Welcome
-      </div>
-      <h3 class="header__big ">4KREATIVE</h3>
-      <h1 class="header__ideas reveal"><span>Your Ideas</span></h1>
-      <h1 class="header__brought reveal" id='revTwo'><span>Brought To Life</span></h1>
-      <div class="header__typing">
-        <span class="typer" id="main"
-          data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success" data-colors="#333"
-          data-delay="86" data-deleteDelay="3000"></span>
-        <span class="cursor" data-owner="main"></span>
-      </div>
-      <button class="header__btn btn">Contact Us</button>
-      <button class="header__btn2 btn">Services</button>
-      <ul class="header__social">
-        <li><a href="#"><i class="fa_menu fa fa-twitter fa-2x mb-sm"></i></a></li>
-        <li><a href="#"><i class="fa_menu fa fa-facebook fa-2x mb-sm"></i></a></li>
-        <li><a href="#"><i class="fa_menu fa fa-envelope fa-2x "></i></a></li>
-      </ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-      </div>
-    </header>
-    <div class="bg-video">
-      <video class="bg-video__content" autoplay muted loop>
-        <source src="img/strings.mp4" type="video/mp4" />
-        Your browser is not supported!
-      </video>
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="shortcut icon" type="image/png" href="" />
+  <title>4 Kreative</title>
+</head>
+
+<body class="container">
+  <header class="header">
+    <img src="img\logo4k.png" alt="4KREATIVE logo" class="header__logo" />
+    <div class="header__sidebar">
+      <svg class="line" height="6" width="40">
+        <line style="stroke:#3ee7d6;;stroke-width:2" x1="0" x2="30" y1="0" y2="0"></line>
+      </svg> Welcome
     </div>
-    <section class="work">
-      <h3 class="heading-1">Recent Projects</h3>
-      <div class="work__list">
-        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
-        <div class="work__details">
-          <h4 class="heading-4 heading-4--light">The Light Walk</h4>
-          <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
-        </div>
-
-        <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
-        <div class="work__details">
-          <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
-          <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
-        </div>
-
-        <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
-        <div class="work__details">
-          <h4 class="heading-4 heading-4--light">Designershopp</h4>
-          <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
-        </div>
-      </div>
-    </section>
-    <div class="about__pictures">
-      <img src="img/img1.jpg" alt="Code" class="about__img--1" />
-      <img src="img/img5.jpg" alt="Design" class="about__img--2" />
+    <h3 class="header__big ">4KREATIVE</h3>
+    <h1 class="header__ideas reveal"><span>Your Ideas</span></h1>
+    <h1 class="header__brought reveal" id='revTwo'><span>Brought To Life</span></h1>
+    <div class="header__typing">
+      <span class="typer" id="main"
+        data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success" data-colors="#333"
+        data-delay="86" data-deleteDelay="3000"></span>
+      <span class="cursor" data-owner="main"></span>
     </div>
-    <div class="about__content">
-      <h3 class="heading-3 mb-sm">
-        We are a team of creative and technical proffesionals ready to start
-        your next big idea!
-      </h3>
-      <h2 class="heading-2 heading-2--dark mb-md">
-        What We Do
-      </h2>
-      <p class="about__text">
-        <span class="bold">Define:</span> Gather requirments, organize and plan
-        the project.
-      </p>
-      <p class="about__text">
-        <span class="bold">Design:</span> Our team collaborates with you to
-        creativly design your brand..
-      </p>
-      <p class="about__text">
-        <span class="bold">Develop:</span> Prototypes and alpha version of the
-        project are set for approval
-      </p>
-      <p class="about__text">
-        <span class="bold">Deploy:</span> Prototypes and alpha version of the
-        project are set for approval.
-      </p>
-      <button class="btn">Contact Us</button>
+    <button class="header__btn btn">Contact Us</button>
+    <button class="header__btn2 btn">Services</button>
+    <ul class="header__social">
+      <li><a href="#"><i class="fa_menu fa fa-twitter fa-2x mb-sm"></i></a></li>
+      <li><a href="#"><i class="fa_menu fa fa-facebook fa-2x mb-sm"></i></a></li>
+      <li><a href="#"><i class="fa_menu fa fa-envelope fa-2x "></i></a></li>
+    </ul>
+
     </div>
-    <section class="services">
-      <div class="service">
-        <svg class="service__icon">
-          <use xlink:href="img/sprite.svg#icon-global"></use>
-        </svg>
-        <h4 class="heading-4 heading-4--dark">Custom Web Design</h4>
-        <p class="service__text">
-          If you want want your website to work in all situations, then you need
-          something that's fast to load, looks professional and most of all,
-          just works. That's exactly what I offer whether it's a simple HTML and
-          CSS site to an Eccomerce Site.
-        </p>
-      </div>
-      <div class="service">
-        <svg class="service__icon">
-          <use xlink:href="img/sprite.svg#icon-presentation"></use>
-        </svg>
-        <h4 class="heading-4 heading-4--dark">Search Engine Optimization</h4>
-        <p class="service__text">
-          If you want want your website to work in all situations, then you need
-          something that's fast to load, looks professional and most of all,
-          just works. That's exactly what I offer whether it's a simple HTML and
-          CSS site to an Eccomerce Site.
-        </p>
-      </div>
-      <div class="service">
-        <svg class="service__icon">
-          <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-        </svg>
-        <h4 class="heading-4 heading-4--dark">Graphic Design</h4>
-        <p class="service__text">
-          If you want want your website to work in all situations, then you need
-          something that's fast to load, looks professional and most of all,
-          just works. That's exactly what I offer whether it's a simple HTML and
-          CSS site to an Eccomerce Site.
-        </p>
-      </div>
-      <div class="service">
-        <svg class="service__icon">
-          <use xlink:href="img/sprite.svg#icon-key"></use>
-        </svg>
-        <h4 class="heading-4 heading-4--dark">Marketing</h4>
-        <p class="service__text">
-          If you want want your website to work in all situations, then you need
-          something that's fast to load, looks professional and most of all,
-          just works. That's exactly what I offer whether it's a simple HTML and
-          CSS site to an Eccomerce Site.
-        </p>
-      </div>
-    </section>
-    <section class="contact" id="contact">
-      <h3 class="heading-2 mb-sm">Contact Now!</h3>
-      <div class="form__group">
-        <input
-          type="text"
-          class="form__input"
-          placeholder="Full name"
-          id="name"
-          required
-        />
-        <label for="name" class="form__label">Full name</label>
+  </header>
+  <div class="bg-video">
+    <video class="bg-video__content" poster="img/strings.jpg" autoplay muted loop>
+      <source src="img/strings.mp4" type="video/mp4" />
+      <source src="img/strings.webm" type="video/mp4" />
+      Your browser is not supported!
+    </video>
+  </div>
+  <section class="work">
+    <h3 class="heading-1">Recent Projects</h3>
+    <div class="work__list">
+      <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
+      <div class="work__details">
+        <h4 class="heading-4 heading-4--light">The Light Walk</h4>
+        <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
 
-      <div class="form__group">
-        <input
-          type="email"
-          class="form__input"
-          placeholder="Email address"
-          id="email"
-          required
-        />
-        <label for="email" class="form__label">Email address</label>
+      <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
+      <div class="work__details">
+        <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
+        <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
 
-      <div class="form__group">
-        <textarea
-          rows="6"
-          class="form__input"
-          id="message"
-          name="message"
-          placeholder="Tell us about your project (Scope, timeline, budget, etc."
-          name="message"
-          required
-        ></textarea>
-        <label for="message" class="form__label"> Message</label>
+      <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
+      <div class="work__details">
+        <h4 class="heading-4 heading-4--light">Designershopp</h4>
+        <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
-
-      <button class="btn form__btn">Send Request!</button>
-    </section>
-    <footer class="footer">
-      <ul class="nav">
-        <li class="nav__item">
-          <a href="#" class="nav__link">Get In Touch</a>
-        </li>
-
-        <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
-
-        <li class="nav__item">
-          <a href="#" class="nav__link">Come work with us!</a>
-        </li>
-      </ul>
-      <p class="copyright">
-        &copy; Copyright 2019 by 4KREATIVE.
+    </div>
+  </section>
+  <div class="about__pictures">
+    <img src="img/img1.jpg" alt="Code" class="about__img--1" />
+    <img src="img/img5.jpg" alt="Design" class="about__img--2" />
+  </div>
+  <div class="about__content">
+    <h3 class="heading-3 mb-sm">
+      We are a team of creative and technical proffesionals ready to start
+      your next big idea!
+    </h3>
+    <h2 class="heading-2 heading-2--dark mb-md">
+      What We Do
+    </h2>
+    <p class="about__text">
+      <span class="bold">Define:</span> Gather requirments, organize and plan
+      the project.
+    </p>
+    <p class="about__text">
+      <span class="bold">Design:</span> Our team collaborates with you to
+      creativly design your brand..
+    </p>
+    <p class="about__text">
+      <span class="bold">Develop:</span> Prototypes and alpha version of the
+      project are set for approval
+    </p>
+    <p class="about__text">
+      <span class="bold">Deploy:</span> Prototypes and alpha version of the
+      project are set for approval.
+    </p>
+    <button class="btn">Contact Us</button>
+  </div>
+  <section class="services">
+    <div class="service">
+      <svg class="service__icon">
+        <use xlink:href="img/sprite.svg#icon-global"></use>
+      </svg>
+      <h4 class="heading-4 heading-4--dark">Custom Web Design</h4>
+      <p class="service__text">
+        If you want want your website to work in all situations, then you need
+        something that's fast to load, looks professional and most of all,
+        just works. That's exactly what I offer whether it's a simple HTML and
+        CSS site to an Eccomerce Site.
       </p>
-    </footer>
-    <script src="assets/js/typer.js"></script>
-  </body>
+    </div>
+    <div class="service">
+      <svg class="service__icon">
+        <use xlink:href="img/sprite.svg#icon-presentation"></use>
+      </svg>
+      <h4 class="heading-4 heading-4--dark">Search Engine Optimization</h4>
+      <p class="service__text">
+        If you want want your website to work in all situations, then you need
+        something that's fast to load, looks professional and most of all,
+        just works. That's exactly what I offer whether it's a simple HTML and
+        CSS site to an Eccomerce Site.
+      </p>
+    </div>
+    <div class="service">
+      <svg class="service__icon">
+        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+      </svg>
+      <h4 class="heading-4 heading-4--dark">Graphic Design</h4>
+      <p class="service__text">
+        If you want want your website to work in all situations, then you need
+        something that's fast to load, looks professional and most of all,
+        just works. That's exactly what I offer whether it's a simple HTML and
+        CSS site to an Eccomerce Site.
+      </p>
+    </div>
+    <div class="service">
+      <svg class="service__icon">
+        <use xlink:href="img/sprite.svg#icon-key"></use>
+      </svg>
+      <h4 class="heading-4 heading-4--dark">Marketing</h4>
+      <p class="service__text">
+        If you want want your website to work in all situations, then you need
+        something that's fast to load, looks professional and most of all,
+        just works. That's exactly what I offer whether it's a simple HTML and
+        CSS site to an Eccomerce Site.
+      </p>
+    </div>
+  </section>
+  <section class="contact" id="contact">
+    <h3 class="heading-2 mb-sm">Contact Now!</h3>
+    <div class="form__group">
+      <input type="text" class="form__input" placeholder="Full name" id="name" required />
+      <label for="name" class="form__label">Full name</label>
+    </div>
+
+    <div class="form__group">
+      <input type="email" class="form__input" placeholder="Email address" id="email" required />
+      <label for="email" class="form__label">Email address</label>
+    </div>
+
+    <div class="form__group">
+      <textarea rows="6" class="form__input" id="message" name="message"
+        placeholder="Tell us about your project (Scope, timeline, budget, etc." name="message" required></textarea>
+      <label for="message" class="form__label"> Message</label>
+    </div>
+
+    <button class="btn form__btn">Send Request!</button>
+  </section>
+  <footer class="footer">
+    <ul class="nav">
+      <li class="nav__item">
+        <a href="#" class="nav__link">Get In Touch</a>
+      </li>
+
+      <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+
+      <li class="nav__item">
+        <a href="#" class="nav__link">Come work with us!</a>
+      </li>
+    </ul>
+    <p class="copyright">
+      &copy; Copyright 2019 by 4KREATIVE.
+    </p>
+  </footer>
+  <script src="assets/js/typer.js"></script>
+</body>
+
 </html>
