--- a/indexNew.html
+++ b/indexNew.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" type="image/png" href="" />
-    <title>4 Kreative</title>
-  </head>
-  <body class="container">
-    <header class="header">
-      <img src="img\logo4k.png" alt="4KREATIVE logo" class="header__logo" />
-      <div class="header__sidebar">
-        <svg class="line" height="6" width="40">
-          <line style="stroke:#3ee7d6;;stroke-width:2" x1="0" x2="30" y1="0" y2="0"></line>
-        </svg> Scroll
-      </div>
-      <h3 class="header__big ">4KREATIVE</h3>
-      <h1 class="header__ideas reveal"><span>Your Ideas</span></h1>
-      <h1 class="header__brought reveal" id='revTwo'><span>Brought To Life</span></h1>
-      <div class="header__typing">
-        <span class="typer" id="main"
-          data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success" data-colors="#333"
-          data-delay="86" data-deleteDelay="3000"></span>
-        <span class="cursor" data-owner="main"></span>
-      </div>
-      <button class="header__btn btn">Contact Us</button>
-      <button class="header__btn2 btn">Services</button>
-      <ul class="header__social">
-        <li><a href="#"><i class="fa_menu fa fa-twitter fa-2x mb-sm"></i></a></li>
-        <li><a href="#"><i class="fa_menu fa fa-facebook fa-2x mb-sm"></i></a></li>
-        <li><a href="#"><i class="fa_menu fa fa-envelope fa-2x "></i></a></li>
-      </ul>
+<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="css/style.css" />
+<link rel="shortcut icon" type="image/png" href="" />
+<title>4 Kreative</title>
+</head>
+
+<body class="container">
+  <header class="header">
+    <img src="img\logo4k.png" alt="4KREATIVE logo" class="header__logo" />
+    <div class="header__sidebar">
+      <svg class="line" height="6" width="40">
+        <line style="stroke:#3ee7d6;;stroke-width:2" x1="0" x2="30" y1="0" y2="0"></line>
+      </svg> Scroll
+    </div>
+    <h3 class="header__big ">4KREATIVE</h3>
+    <h1 class="header__ideas reveal"><span>Your Ideas</span></h1>
+    <h1 class="header__brought reveal" id='revTwo'><span>Brought To Life</span></h1>
+    <div class="header__typing">
+      <span class="typer" id="main"
+        data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success" data-colors="#333"
+        data-delay="86" data-deleteDelay="3000"></span>
+      <span class="cursor" data-owner="main"></span>
+    </div>
+    <button class="header__btn btn">Contact Us</button>
+    <button class="header__btn2 btn">Services</button>
+    <ul class="header__social">
+      <li><a href="#"><i class="fa_menu fa fa-twitter fa-2x mb-sm"></i></a></li>
+      <li><a href="#"><i class="fa_menu fa fa-facebook fa-2x mb-sm"></i></a></li>
+      <li><a href="#"><i class="fa_menu fa fa-envelope fa-2x "></i></a></li>
+    </ul>
 
     </div>
   </header>
@@ -49,21 +47,21 @@
     <div class="work__list">
       <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
       <div class="work__details">
-        <h4 class="heading-4 heading-4--light">The Light Walk</h4>
+        <h4 class="heading-4 heading-4--light"><span id="light_walk">The Light Walk</span></h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
 
       <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
       <div class="work__details">
-        <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
+        <h4 class="heading-4 heading-4--light"><span id="bl_system">B&L Cremation Systems</span></h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
 
       <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
       <div class="work__details">
-        <h4 class="heading-4 heading-4--light">Designershopp</h4>
+        <h4 class="heading-4 heading-4--light"><span id="designer_shop">Designershopp</span></h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
