added more media queries

--- a/indexNew.html
+++ b/indexNew.html
@@ -73,7 +73,7 @@
   </div>
   <div class="about__content">
     <h3 class="heading-3 mb-sm">
-      We are a team of creative and technical proffesionals ready to start
+      Creative and technical proffesionals ready to create
       your next big idea!
     </h3>
     <h2 class="heading-2 heading-2--dark mb-md">
