works style update

--- a/indexNew.html
+++ b/indexNew.html
@@ -48,21 +48,21 @@
     <div class="work__list">
       <img src="img/lightmockup-min.png" alt="Work 1" class="work__img">
       <div class="work__details">
-        <h4 class="heading-4 heading-4--light"><span id="light_walk">The Light Walk</span></h4>
+        <h4 class="heading-4 heading-4--light"><span class="work__light_walk">The Light Walk</span></h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
 
       <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
       <div class="work__details">
-        <h4 class="heading-4 heading-4--light"><span id="bl_system">B&L Cremation Systems</span></h4>
+        <h4 class="heading-4 heading-4--light"><span class="work__bl_system">B&L Cremation Systems</span></h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
 
       <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
       <div class="work__details">
-        <h4 class="heading-4 heading-4--light"><span id="designer_shop">Designershopp</span></h4>
+        <h4 class="heading-4 heading-4--light"><span class="work__designer_shop">Designershopp</span></h4>
         <p class="work__details">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Beatae cupiditate assumenda nemo delectus totam atque quas suscipit dicta.</p>
       </div>
