added contetn to service section

--- a/indexNew.html
+++ b/indexNew.html
@@ -115,36 +115,43 @@
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-presentation"></use>
       </svg>
-      <h4 class="heading-4 heading-4--dark">Search Engine Optimization</h4>
+      <h4 class="heading-4 heading-4--dark">Content & SEO Strategy</h4>
       <p class="service__text">
-        If you want want your website to work in all situations, then you need
-        something that's fast to load, looks professional and most of all,
-        just works. That's exactly what I offer whether it's a simple HTML and
-        CSS site to an Eccomerce Site.
+        4Kreative provides highly effective search engine optimization
+        and Internet marketing strategies to drive more customers to your site.
+        Identify top inbound opportunities and optimize your ranking for high-intent keywords. Increase your search engine
+        visibility to drive qualified traffic to your website.
       </p>
     </div>
     <div class="service">
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-map-pin"></use>
       </svg>
-      <h4 class="heading-4 heading-4--dark">Graphic Design</h4>
+      <h4 class="heading-4 heading-4--dark">Branding & Design</h4>
       <p class="service__text">
-        If you want want your website to work in all situations, then you need
-        something that's fast to load, looks professional and most of all,
-        just works. That's exactly what I offer whether it's a simple HTML and
-        CSS site to an Eccomerce Site.
+        Our clients understand the value of great design and its ability to drive
+        adoption, engagement, and loyalty in today’s
+        complex marketplace. We design phenomenal brand experiences across the
+        customer lifecycle by applying design thinking to
+        business to connect, disrupt, and engage. Whether we’re crafting an
+        end-to-end customer experience or just working on a
+        single touchpoint, we design with an eye towards the holistic customer experience.
+        Design conversion-optimized website and landing pages, engaging ads, email templates, and more. Make sure your brand
+        uses strategic designs that stand out from the crowd.
       </p>
     </div>
     <div class="service">
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-key"></use>
       </svg>
-      <h4 class="heading-4 heading-4--dark">Marketing</h4>
+      <h4 class="heading-4 heading-4--dark">Socail Media & Email Marketing</h4>
       <p class="service__text">
-        If you want want your website to work in all situations, then you need
-        something that's fast to load, looks professional and most of all,
-        just works. That's exactly what I offer whether it's a simple HTML and
-        CSS site to an Eccomerce Site.
+          Drive brand awareness and engagement through organic and paid social
+          campaigns. Leverage top social strategies to grow a
+          following and gain valuable insight into your customers.
+          Build highly segmented email campaigns that nurture leads into paying
+          customers. Keep potential and existing customers
+          engaged with newsletters and promotional materials.
       </p>
     </div>
   </section>
